# odoo-enterprise-rag-agent

./: .env.example  .gitignore  Makefile  README.md  add_17_commits.sh  contribution.txt  docker-compose.yml  fix_email_and_repush.sh  push_17_contributions.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_agent.py  vercel.json
deploy/docker/: Dockerfile
scripts/: setup.sh
src/: config.py  main.py
src/agents/: odoo_agent.py
src/application/agents/: odoo_rag_agent.py
src/application/services/: odoo_context_builder.py
src/infrastructure/odoo/: xmlrpc_client.py
src/infrastructure/odoo/tools/: partner_resolver.py
src/presentation/: main.py
src/presentation/dependencies/: services.py
src/static/: chat.html
