[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "odoo-enterprise-rag-agent"
version = "0.1.0"
description = "Production-grade RAG agent for Odoo 17 Enterprise"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "redis>=5.0",
    "tenacity>=8.3",
    "structlog>=24.2",
    "prometheus-client>=0.20",
]
 
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "pytest-cov", "ruff", "mypy", "ragas"]
 
[tool.ruff]
line-length = 100
target-version = "py311"
 
[tool.mypy]
strict = true
